# containers-practice

./: .gitignore  README.md
practice-1/: Dockerfile.bad  Dockerfile.good  README.md  pyproject.toml
practice-1/src/: llm.py  main.py
practice-2/: .dockerignore  README.md  docker-compose.yml  pyproject.toml
practice-2/backend/: Dockerfile  Dockerfile.dbinit
practice-2/backend/src/: init_db.py  llm_agent.py  main.py  utils.py
practice-2/frontend/: Dockerfile
practice-3/: README.md  tmp.txt
practice-3/manifests/: nextcloud.yml  pg_secret.yml
practice-4/: .dockerignore  .env.example  README.md  chromadb.yaml  env_configmap.yaml  init.yaml  llm_rag.yaml
practice-4/backend/: Dockerfile  Dockerfile.dbinit  pyproject.toml
practice-4/backend/src/: chroma_client.py  embedder.py  init_db.py  llm.py
practice-4/frontend/: Dockerfile  pyproject.toml  webui.py
practice-4/manifests/: chromadb.yaml  llm_rag.yaml  llm_rag_pvc.yaml  webui.yaml
